# coglivros

./: pyproject.toml
coglivros/: admin.py  apps.py  models.py  urls.py  views.py
coglivros/migrations/: 0001_initial.py  0002_alter_livro_genero.py  0003_livro_publicada.py  0004_livro_data_publicacao.py  0005_alter_livro_foto.py
setup/: settings.py  urls.py
setup/static/styles/: style.css
static/styles/: style.css  style_coglivro.css  style_livro.css
templates/coglivros/: base_coglivros.html  base_livros.html  buscar.html  home.html  livros.html
templates/coglivros/partials/: _menu_superior.html
templates/usuarios/: _base_usuario.html  cadastro.html  login.html
usuarios/: forms.py  urls.py  views.py
