[tool.poetry]
name = "coglivros"
version = "0.1.0"
description = ""
authors = ["devmarcs <devmarcelo.gus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
